<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Top TextView and Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <!-- Amount TextView and ProgressBar -->

    <!-- EditText and Total TextView -->

    <!-- Please give and RadioGroup -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_hw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="72dp"
            android:text="@string/welcome"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textview_ratio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_give_gen"
            android:textSize="15sp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="16dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="193dp"
            android:layout_height="108dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/radioButton_PayPal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paypal" />

            <RadioButton
                android:id="@+id/radioButton_Direct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direct" />
        </RadioGroup>

        <NumberPicker
            android:id="@+id/np"
            android:layout_width="68dp"
            android:layout_height="177dp"
            android:layout_marginStart="48dp"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="311dp"
            android:layout_height="15dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            />

    </LinearLayout>

    <!-- NumberPicker -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_amount"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginEnd="16dp"
            android:autofillHints="1000"
            android:ems="10"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_weight="1"
            android:layout_gravity="center"

            android:text="@string/donate" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_weight="1"
            android:layout_gravity="center"

            android:text="@string/total_so_far" />

    </LinearLayout>

</LinearLayout>
